- adapt to urpmi-5.7 API:
  o don't want to force a device anymore
  o handle new "cdrom://" type
- handle --test
- reuse more urpmi code

Version 4.3.1 - Wed Feb 27 2008, Thierry Vignaud

- rpmdrake's package list:
  o make select checkbox not activatable for base packages instead of
    popup an explanation
  o update icon set

Version 4.3 - Tue Feb 26 2008, Thierry Vignaud

- display size of data to downloaded (#32154)
- make clearer why there's no medium (#37033) (maybe should we just
  not display the medium for installed packages like old_rpmdrake
  did?)
- rpmdrake:
  o remove leading/trailing spacing in searched word when pasting (#23249)
  o package list:
    * hide architecture column on non biarch systems
    * shrink some column headers
    * statut column:
      + add a label to its header
      + move it at end
      + no icon for uninstalled packages

Version 4.2.6 - Mon Feb 25 2008, Thierry Vignaud

- rpmdrake:
  o adapt to urpmi-5.6 API
  o show KDE4 apps in 'GUI packages' view too
- edit-urpm-sources:
  o display proper type for mirror lists

Version 4.2.5 - Sat Feb 23 2008, Thierry Vignaud

- edit-urpm-sources:
  o fix crashing on clicking on "Create media for a whole
    distribution" (regression introduced in rpmdrake-4.2)

Version 4.2.4 - Sat Feb 23 2008, Thierry Vignaud

- MandrivaUpdate:
  o adjust default layout repartition (#36069)

Version 4.2.3 - Fri Feb 22 2008, Thierry Vignaud

- edit-urpm-sources:
  o add a progress bar while downloading mirrors list & enable to
    cancel it (#34630)
  o fix crashing when adding a custom medium (regression introduced in
    4.2)
  o set 'ftp_proxy' with the same value as 'http_proxy' (#31026)

Version 4.2.2 - Fri Feb 22 2008, Thierry Vignaud

- rpmdrake:
  o 'GUI packages' view now include graphical packages from all media

Version 4.2.1 - Thu Feb 21 2008, Thierry Vignaud

- edit-urpm-sources:
  o drop architecture choice 
  o only ask api.mdv.com for 'distrib' style URLs