@@ -2,6 +2,7 @@
   o don't want to force a device anymore
   o handle new "cdrom://" type
 - handle --test
+- handle priority upgrade list
 - reuse more urpmi code
 
 Version 4.3.1 - Wed Feb 27 2008, Thierry Vignaud
